added pagination for showing public messages